--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            📝在技术文章的审核中担任过评审老师的角色、为问卷调查报告制定过题目、编写过多种产品软文、创建过个人社区和开源项目、也参与过专业课程的制定与视频录制、涉足过游戏主播和比赛选手、创立过自己的公司和淘宝店、在CSDN写过八百多篇技术文章、出版过专业技术书籍、独立开发过自己的APP、跑过十五公里、徒步爬过衡山、有过三个月减肥20斤的经历、小学弄哭过英语老师、入职场后当着老板的面吐槽直属领导、怼过各级别的领导（最大高我四个级别）、被裁员后成功拿到四万劳动赔偿。
+                            📝在技术文章的审核中担任过评审老师的角色、为问卷调查报告制定过题目、编写过多种产品软文、创建过个人社区和开源项目、也参与过专业课程的制定与视频录制、涉足过游戏主播和比赛选手、创立过自己的公司和淘宝店、在CSDN写过一千多篇技术文章、出版过专业技术书籍、独立开发过自己的APP、跑过十五公里、徒步爬过衡山、有过三个月减肥20斤的经历、小学弄哭过英语老师、入职场后当着老板的面吐槽直属领导、怼过各级别的领导（最大高我四个级别）、被裁员后成功拿到四万劳动赔偿。
                         </li>
                     </ul>
                 </section>
@@ -206,7 +206,7 @@
                             <p>🍊个人幕后大佬社区（已达成）</p>
                         </li>
                         <li>
-                            <p>🍊文章创作超过八百篇（已达成）</p>
+                            <p>🍊文章创作超过一千篇（已达成）</p>
                         </li>
                         <li>
                             <p>🍊文章访问量超过一百万（已达成）</p>
@@ -233,13 +233,42 @@
                             <p>🍊打通36个新媒体平台（已达成）</p>
                         </li>
                         <li>
-                            <p>🍊Java高级开发工程师（已达成）</p>
+                            <p>🍊Java资深开发工程师（已达成）</p>
                         </li>
                         <li>
                             <p>🍊Java领域优质创作者（已达成）</p>
                         </li>
                         <li>
                             <p>🍊图灵学院课程学完（已达成）</p>
+                        </li>
+                        <li>
+                            <p>🍊独立出版图书（已达成）</p>
+                        </li>
+                    </ul>
+                </section>
+                <!-- 独立出版图书 -->
+                <section class="contact info-unit">
+                    <h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>独立出版图书</h2>
+                    <hr/>
+                    <ul>
+                        <li>
+                            <p>🍊出版社（清华大学出版社）</p>
+                        </li>
+                        <li>
+                            <p>🍊出版技术类图书（Java项目实战——深入理解大型互联网企业通用技术基础篇）</p>
+                        </li>
+                        <li>
+                            <p>🍊出版技术类图书（Java项目实战——深入理解大型互联网企业通用技术进阶篇）</p>
+                        </li>
+                        <li>
+                            <p>🍊出版技术类图书（Java项目实战——深入理解大型互联网企业通用技术架构篇）</p>
+                        </li>
+                        <li>
+                            <p>🍊出版商业类图书（一名开发者的商业思维——产品、公司、行业和市场的生命周期探索）</p>
+                        </li>
+                        <li>
+                            <p>🍊出版表达类图书（跨越界限：思辨、沟通、演讲的综合能力训练——思考、跨文化交流与技术表达的实践指南）</p>
                         </li>
                     </ul>
                 </section>
@@ -527,7 +556,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <p>🌟文章点赞次数超过一万（9,412/10000）</p>
+                            <p>🌟文章点赞次数超过一万（9,800/10000）</p>
                         </li>
                         <li>
                             <p>🌟CSDN全站排名前一百名（最靠近的一次是134名）</p>
@@ -542,7 +571,7 @@
                             <p>🌟娶个媳妇生个娃（单身求偶状态）</p>
                         </li>
                         <li>
-                            <p>🌟独立出版专业书籍（明年出版）</p>
+                            <p>🌟独立出版专业书籍（明年出版五本）</p>
                         </li>
                         <li>
                             <p>🌟实现个人财富自由（计划35岁躺平）</p>
@@ -640,7 +669,7 @@
         </article>
         <footer class="footer">
             <p>© 2023 廖志伟.文档最后更新时间为
-                <time>2023年08月10日</time>.</p>
+                <time>2023年09月03日</time>.</p>
         </footer>
         <!-- 侧栏 -->
         <aside>
