--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </li>
                         <li>
                             <label><b>📝职业</b></label>
-                            <span>Java高级开发工程师</span>
+                            <span>Java资深开发工程师</span>
                         </li>
                     </ul>
                 </section>
