--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
                             <p>🍊文章评论次数超过一万（已达成）</p>
                         </li>
                         <li>
+                            <p>🍊文章点赞次数超过一万（已达成）</p>
+                        </li>
+                        <li>
                             <p>🍊CSDN博客专家（已达成）</p>
                         </li>
                         <li>
@@ -265,10 +268,7 @@
                             <p>🍊出版技术类图书（Java项目实战——深入理解大型互联网企业通用技术架构篇）</p>
                         </li>
                         <li>
-                            <p>🍊出版商业类图书（一名开发者的商业思维——产品、公司、行业和市场的生命周期探索）</p>
-                        </li>
-                        <li>
-                            <p>🍊出版表达类图书（跨越界限：思辨、沟通、演讲的综合能力训练——思考、跨文化交流与技术表达的实践指南）</p>
+                            <p>🍊出版表达类图书（解密程序员的思维密码--沟通、演讲、思考的实践）</p>
                         </li>
                     </ul>
                 </section>
@@ -556,10 +556,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <p>🌟文章点赞次数超过一万（9,800/10000）</p>
-                        </li>
-                        <li>
-                            <p>🌟CSDN全站排名前一百名（最靠近的一次是134名）</p>
+                            <p>🌟CSDN全站排名前一百名（最靠近的一次是128名）</p>
                         </li>
                         <li>
                             <p>🌟社交类APP研发成功（研发中）</p>
@@ -571,7 +568,7 @@
                             <p>🌟娶个媳妇生个娃（单身求偶状态）</p>
                         </li>
                         <li>
-                            <p>🌟独立出版专业书籍（明年出版五本）</p>
+                            <p>🌟独立出版专业书籍（已签约四本）</p>
                         </li>
                         <li>
                             <p>🌟实现个人财富自由（计划35岁躺平）</p>
@@ -669,7 +666,7 @@
         </article>
         <footer class="footer">
             <p>© 2023 廖志伟.文档最后更新时间为
-                <time>2023年09月03日</time>.</p>
+                <time>2023年10月11日</time>.</p>
         </footer>
         <!-- 侧栏 -->
         <aside>
