--- a/index.html
+++ b/index.html
@@ -662,6 +662,12 @@
                         </li>
                     </ul>
                 </section>
+				<section class="contact info-unit">
+                    <h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>简历模板</h2>
+                    <hr/>
+                    <iframe src="廖志伟_本科_Java开发_六年_离职__17717299170-简历模板.pdf" style="width:100%; height:4000px;"></iframe>
+                </section>
             </section>
         </article>
         <footer class="footer">
