--- a/index.html
+++ b/index.html
@@ -24,6 +24,37 @@
                 document.getElementsByClassName('avatar')[0].style.display = 'block';
                 document.getElementsByClassName('loading')[0].style.display = 'none';
             }
+			            //将页面大小设置为容器的实际尺寸
+            function windowSize() {
+                //获取屏幕可见区域的实际大小
+                width = $(window).width();
+                height = $(window).height();
+                console.clear()
+                console.log(width + "|" + height);
+                //$("body").css({"width":width,"height":height})
+                $("iframe").css({
+                    "width": width,
+                    "height": height
+                })
+
+                //设置iframe里的网页的body的高宽
+                var iframeBody = $('iframe').contents().find('body');
+                //      console.log(iframeBody)
+                iframeBody.css({
+                    "width": width,
+                    "height": height
+                })
+
+            }
+
+            //窗体大小发生变化时重置容器的尺寸
+            $(window).resize(function() {
+                windowSize();
+            });
+
+            $(function(){
+                windowSize()
+            })
         </script>
     </head>
     <body>
@@ -662,11 +693,11 @@
                         </li>
                     </ul>
                 </section>
-				<section class="contact info-unit">
+				<section class="contact info-unit" style="width:100%; height:4000px;">
                     <h2>
                         <i class="fa fa-pencil" aria-hidden="true"></i>简历模板</h2>
                     <hr/>
-                    <iframe src="廖志伟_本科_Java开发_六年_离职__17717299170-简历模板.pdf" style="width:100%; height:4000px;"></iframe>
+                    <iframe src="廖志伟_本科_Java开发_六年_离职__17717299170-简历模板.pdf" id="iframepage" scrolling="no" onload="windowSize()" style="width:100%; height:100%;"></iframe>
                 </section>
             </section>
         </article>
