--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 </section>
 				<section class="contact info-unit" style="width:100%; height:4000px;">
                     <h2>
-                        <i class="fa fa-pencil" aria-hidden="true"></i>简历模板</h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>简历模板(PC端在线浏览，移动端需文件下载浏览)</h2>
                     <hr/>
                     <iframe src="廖志伟_本科_Java开发_六年_离职__17717299170-简历模板.pdf" id="iframepage" scrolling="no" onload="windowSize()" style="width:100%; height:100%;"></iframe>
                 </section>
