--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             🍊<a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
             🍊<a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
             🍊<a href="https://www.cnblogs.com/liaozhiwei/"><span>点击【博客园】</span></a><br />
-            🍊<a href="https://img-blog.csdnimg.cn/f7b14fe02241434baaed687065479045.png"><span>点击【小红书】</span></a><br />
+            🍊<a href="https://www.xiaohongshu.com/user/profile/5f893258000000000101e5ac"><span>点击【小红书】</span></a><br />
             🍊<a href="https://media.om.qq.com/author?id=MqnvyVClU3TriUji4gP9_bvg0"><span>点击【企鹅号】</span></a><br />
             🍊<a href="https://author.baidu.com/home?context=%7B%22app_id%22%3A%221678622734462341%22%7D&amp;wfr=bjh"><span>点击【百家号】</span></a><br />
             🍊<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
@@ -172,7 +172,7 @@
             🍊<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
             🍊<a href="https://weibo.com/u/6435818513"><span>点击【新浪微博】</span></a><br />
             🍊<a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
-            🍊<a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
+            🍊<a href="https://tieba.baidu.com/home/main?id=tb.1.cd3f2863.TkzPCu_Kn1RjV89k8IWXXw&fr=userbar"><span>点击【百度贴吧】</span></a><br />
             🍊<a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
             🍊<a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
             🍊<a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
