--- a/index.html
+++ b/index.html
@@ -310,42 +310,42 @@
             <ul>
                 <li>
                     <span>
-				        📝具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、HTTP协议、TCPIP协议、OAUTH2协议、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组。
+				        🍊具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、HTTP协议、TCPIP协议、OAUTH2协议、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组。
                     </span>
                 </li>
                 <li>
                     <span>
-				        📝熟悉数据结构：数组（BaseArray、Vector）、链表（ArrayList、LinkedList、DoubleLinkedList）、栈（ArrayStack、ListStack、LinkedListStack）、队列（Queue、PrioritQueue）、树论基础与二叉树、二叉搜索树与红黑树、Btree树、Trie树、赫夫曼树、堆树、图论基础、最短路径。
+				        🍊熟悉数据结构：数组（BaseArray、Vector）、链表（ArrayList、LinkedList、DoubleLinkedList）、栈（ArrayStack、ListStack、LinkedListStack）、队列（Queue、PrioritQueue）、树论基础与二叉树、二叉搜索树与红黑树、Btree树、Trie树、赫夫曼树、堆树、图论基础、最短路径。
                             算法思想：排序算法（冒泡排序、选择排序、插入排序、希尔排序、归并排序、快速排序、计数排序、基数排序）、基础数论、枚举算法、递归算法、分治算法、回溯算法、贪心算法、动态规划、二分与HashMap、HashSet与TreeSet。
                     </span>
                 </li>
                 <li>
                     <span>
-				        📝熟练掌握集合、JVM内存模型、内存屏障、happens-before和as-if-serial语义、类加载机制、双亲委派、垃圾回收算法、垃圾回收器、空间分配担保策略、安全点与安全区域、记忆集与卡表、JIT技术、可达性分析、强软弱虚引用、GC的过程、三色标记、跨代引用、逃逸分析、内存泄漏与溢出、
+				        🍊熟练掌握集合、JVM内存模型、内存屏障、happens-before和as-if-serial语义、类加载机制、双亲委派、垃圾回收算法、垃圾回收器、空间分配担保策略、安全点与安全区域、记忆集与卡表、JIT技术、可达性分析、强软弱虚引用、GC的过程、三色标记、跨代引用、逃逸分析、内存泄漏与溢出、
                         class文件结构、虚拟机字节码执行引擎、栈帧局部变量表、栈帧操作数栈、动态连接、方法返回地址、方法调用（解析与分派）、有过JVM线上调优、OOM异常排查经验。
                     </span>
                 </li>
                 <li>
                     <span>
-				        📝深入理解Synchronized关键字，ThreadLocal，volatile关键字，线程的生命周期、CompletableFuture事件驱动异步回调、CountDownLatch&CyclicBarrier&Semaphore应用与原理，AtomicReference原子引用&AtomicInteger原子整型，CompareAndSwap底层原理，
+				        🍊深入理解Synchronized关键字，ThreadLocal，volatile关键字，线程的生命周期、CompletableFuture事件驱动异步回调、CountDownLatch&CyclicBarrier&Semaphore应用与原理，AtomicReference原子引用&AtomicInteger原子整型，CompareAndSwap底层原理，
                         Executor线程池原理与源码、Lock锁的使用与原理。深入理解同步器AQS，阻塞队列BlockingQueue&非阻塞队列ConcurrentLinkedQueue&同步队列SyncQueue，Future&ForkJoin框架原理，无锁并发框架Disruptor等并发编程相关技术。
                     </span>
                 </li>
                 <li>
                     <span>
-				        📝深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。
+				        🍊深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。
                     </span>
                 </li>
                 <li>
 					<span>
-				        📝深入理解MySQL关系型数据库： InnoDB数据页结构、CheckPoint技术、AIO与刷新邻接页、行记录格式（Compact、Redundant、Compressed、Dynamic）、Named File Formats机制、表空间（段、区、页）、约束、视图、分区表、BufferPool缓存机制、filesort过程、离散读优化、
+				        🍊深入理解MySQL关系型数据库： InnoDB数据页结构、CheckPoint技术、AIO与刷新邻接页、行记录格式（Compact、Redundant、Compressed、Dynamic）、Named File Formats机制、表空间（段、区、页）、约束、视图、分区表、BufferPool缓存机制、filesort过程、离散读优化、
                         ICP优化、MRR优化、全文检索、行锁、表锁、间隙锁、死锁、主键自增长实现原理、索引数据结构、SQL优化、索引失效的几种情况、聚集索引、辅助索引、覆盖索引、联合索引、FIC、OSC、Online DDL、Cardinality值、redo log、bin log、undolog、Group Commint、隔离级别、
                         ACID底层实现原理、一致性非锁定读（MVCC的原理）、分布式事务、内部事务、SQL的执行流程、缓冲池、管理方式、重做日志刷盘策略、有MySQL调优、Apache ShardingSphere分库分表读写分离、主从复制工作原理、MySQL InnoDB Cluster高可用经验、冷备、热备、逻辑备。
 					</span>
 				</li>
                 <li>
                     <span>
-                        📝深入理解Redis缓存： 多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、
+                        🍊深入理解Redis缓存： 多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、
                         多级缓存架构、并发竞争、主从架构等。 具有集群架构及高可用相关经验、熟悉各种缓存高并发的 使用场景如：缓存雪崩、缓存穿透、缓存失效。
                     </span>
                 </li>
