--- a/index.html
+++ b/index.html
@@ -522,28 +522,28 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🌟CSDN全站排名前一百名（最靠近的一次是121名）</p>
+                    <p>🍊CSDN全站排名前一百名（最靠近的一次是121名）</p>
                 </li>
                 <li>
-                    <p>🌟社交类APP研发成功（研发中）</p>
+                    <p>🍊社交类APP研发成功（研发中）</p>
                 </li>
                 <li>
-                    <p>🌟还清老家的房贷</p>
+                    <p>🍊还清老家的房贷</p>
                 </li>
                 <li>
-                    <p>🌟娶个媳妇生个娃（单身状态）</p>
+                    <p>🍊娶个媳妇生个娃（单身状态）</p>
                 </li>
                 <li>
-                    <p>🌟独立出版专业书籍（已签约四本）</p>
+                    <p>🍊独立出版专业书籍（已签约四本）</p>
                 </li>
                 <li>
-                    <p>🌟实现个人财富自由（计划35岁躺平）</p>
+                    <p>🍊实现个人财富自由（计划35岁躺平）</p>
                 </li>
                 <li>
-                    <p>🌟眼里有光（发现生活的美）</p>
+                    <p>🍊眼里有光（发现生活的美）</p>
                 </li>
                 <li>
-                    <p>🌟八块腹肌（腹肌太难练了）</p>
+                    <p>🍊八块腹肌（腹肌太难练了）</p>
                 </li>
             </ul>
         </section>
@@ -606,25 +606,25 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🍊消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
+                    <p>🔥消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
                 </li>
                 <li>
-                    <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友也会保持一定边界。</p>
+                    <p>🔥关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友也会保持一定边界。</p>
                 </li>
                 <li>
-                    <p>🍊生活观：佛系，理性不失感性，擅长规划总结。不喜欢争吵、不喜欢持续散播负面能量的人、视频、文章、小说等。</p>
+                    <p>🔥生活观：佛系，理性不失感性，擅长规划总结。不喜欢争吵、不喜欢持续散播负面能量的人、视频、文章、小说等。</p>
                 </li>
                 <li>
-                    <p>🍊恋爱观：双方能进行有效的沟通、知足、善良、乐观、情绪稳定、通情达理。</p>
+                    <p>🔥恋爱观：双方能进行有效的沟通、知足、善良、乐观、情绪稳定、通情达理。</p>
                 </li>
                 <li>
-                    <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的，能陪你走到最后的才是对的人，而她一定在我的规划里。</p>
+                    <p>🔥婚姻观：结婚的对象一定是因为喜欢才在一起的，能陪你走到最后的才是对的人，而她一定在我的规划里。</p>
                 </li>
                 <li>
-                    <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。人生苦短，也要让自己开开心心的。</p>
+                    <p>🔥人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。人生苦短，也要让自己开开心心的。</p>
                 </li>
                 <li>
-                    <p>🍊世界观：这个世界有太多令人愤怒却无力改变的事情，而我能做的则是在能力范围内改变一些事情，让自己变得开心。</p>
+                    <p>🔥世界观：这个世界有太多令人愤怒却无力改变的事情，而我能做的则是在能力范围内改变一些事情，让自己变得开心。</p>
                 </li>
             </ul>
         </section>
@@ -638,7 +638,7 @@
 </article>
         <footer class="footer">
             <p>© 2023 廖志伟.文档最后更新时间为
-                <time>2023年10月31日</time>.</p>
+                <time>2023年11月08日</time>.</p>
         </footer>
         <!-- 侧栏 -->
         <aside>
