--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     <p>🍊社交类APP研发成功（研发中）</p>
                 </li>
                 <li>
-                    <p>🍊还清老家的房贷</p>
+                    <p>🍊还清老家的房贷（还有三十多万要还）</p>
                 </li>
                 <li>
                     <p>🍊娶个媳妇生个娃（单身状态）</p>
