--- a/index.html
+++ b/index.html
@@ -464,16 +464,51 @@
                     <p>🎉懂一些正确的理财常识：基金相关的</p>
                 </li>
                 <li>
-                    <p>🎉能够高效的在网上找资源：程序员肯定啦</p>
+                    <p>🎉能够高效的在网上找资源：搜商还是具备滴</p>
                 </li>
                 <li>
-                    <p>🎉有自己的兴趣爱好</p>
+                    <p>🎉有自己的兴趣爱好：一直都有自己的事情可以做</p>
                 </li>
                 <li>
                     <p>🎉保持积极向上生活态度</p>
                 </li>
                 <li>
                     <p>🎉能够定期做总结和规划</p>
+                </li>
+            </ul>
+        </section>
+	<!-- 副业思路 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>思路1：开发一款APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高新技术企业材料，申请政府高兴企业补贴。</p>
+                </li>
+                <li>
+                    <p>思路2：自媒体平台引流到自己的淘宝店铺、APP、私域，可以卖课程，也可以卖一些其他商品。去找一些比较便宜的货源，在自己的渠道里卖，前期选择一些低利润的商品让自己渠道火起来，后期再上架一些高利润的商品。</p>
+                </li>
+                <li>
+                    <p>思路3：先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
+                </li>
+                <li>
+                    <p>思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
+                </li>
+                <li>
+                    <p>思路5：写付费专栏文章，录制付费音频，付费视频在多平台投放。</p>
+                </li>
+                <li>
+                    <p>思路6：搭建自动化流水线，将自己的时间精力抽离出来，通过自动化进行盈利。可以是软件层面的自动化调用接口输出文章，也可以是线下实体店由员工负责的流水线。</p>
+                </li>
+		<li>
+                    <p>思路7：做赋能平台，根据实际情况，搭建平台，给别人服务，平台可以是自己的微信群、公众号、APP、网站等，通过赋能别人做大做强。例如，相亲网站，求职平台等。</p>
+                </li>
+		<li>
+                    <p>思路8：成为中间商，利用自身资源和信息差，赚取利润，例如，为一方提供服务的人找客户抽取提成或者赚差价等。</p>
+                </li>
+		<li>
+                    <p>思路9：钱生钱，每个月都去存大额银行存单，复利模式，稳健为主。</p>
                 </li>
             </ul>
         </section>
