--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             🍊<a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
             🍊<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
             🍊<a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
-            🍊<a href="https://blog.csdn.net/Java_programmer_liao"><span>点击【CSDN】</span></a><br />
+            🍊<a href="https://liaozhiwei.blog.csdn.net/"><span>点击【CSDN】</span></a><br />
             🍊<a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
             🍊<a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
             🍊<a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
