--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <li><span>
                             我是🌟廖志伟🌟，一名🎉Java资深开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉等头衔。
                             拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、
+                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、容器编排Kubernetes、
                             Apache Spark大数据分析引擎、HDFS高吞吐量的分布式文件系统存储，Hive类SQL的引擎、HBase大数据非关系型数据库。
                     </span>
                 </li>
