--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             🍊<a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
             🍊<a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
             🍊<a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
+	    🍊<a href="https://github.com/javawxid"><span>点击【GitHub】</span></a><br />
             🍊<a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
             🍊<a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
             🍊<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
