--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
                     <label><b>开源项目</b></label>
                     <a href="https://gitee.com/java_wxid/java_wxid" target="_blank">java_wxid（项目创始人）</a>
                 </li>
+		<li>
+                    <label><b>自我介绍</b></label>
+                    <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=1000&random=false&width=435&lines=%E6%88%91%E6%98%AF%E5%BB%96%E5%BF%97%E4%BC%9F%EF%BC%8C%E4%B8%80%E5%90%8DJava%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88;Java%E9%A2%86%E5%9F%9F%E4%BC%98%E8%B4%A8%E5%88%9B%E4%BD%9C%E8%80%85%E3%80%81CSDN%E5%8D%9A%E5%AE%A2%E4%B8%93%E5%AE%B6;51CTO%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB%E3%80%81%E9%98%BF%E9%87%8C%E4%BA%91%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB;%E6%8B%A5%E6%9C%89%E5%A4%9A%E5%B9%B4%E4%B8%80%E7%BA%BF%E7%A0%94%E5%8F%91%E5%92%8C%E5%9B%A2%E9%98%9F%E7%AE%A1%E7%90%86%E7%BB%8F%E9%AA%8C;%E7%A0%94%E7%A9%B6%E8%BF%87%E4%B8%BB%E6%B5%81%E6%A1%86%E6%9E%B6%E7%9A%84%E5%BA%95%E5%B1%82%E6%BA%90%E7%A0%81;Spring%E3%80%81SpringBoot%E3%80%81Spring+MVC;SpringCould%E3%80%81Mybatis;Dubbo%E3%80%81Zookeeper;%E6%B6%88%E6%81%AF%E4%B8%AD%E9%97%B4%E4%BB%B6(RabbitMQ%E3%80%81RockerMQ%E3%80%81Kafka);Redis%E7%BC%93%E5%AD%98%E3%80%81MySQL%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93;ElasticSearch%E5%85%A8%E6%96%87%E6%90%9C%E7%B4%A2;MongoDB%E9%9D%9E%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93;ShardingSphere%E5%88%86%E5%BA%93%E5%88%86%E8%A1%A8%E8%AF%BB%E5%86%99%E5%88%86%E7%A6%BB;%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E3%80%81%E9%A2%86%E5%9F%9F%E9%A9%B1%E5%8A%A8DDD;%E5%AE%B9%E5%99%A8%E7%BC%96%E6%8E%92Kubernetes%E7%AD%89%E3%80%82+;%E6%AC%A2%E8%BF%8E%E5%A4%A7%E5%AE%B6%E5%8A%A0%E6%88%91%E5%BE%AE%E4%BF%A1%E5%92%A8%E8%AF%A2;%E5%BE%AE%E4%BF%A1%E5%8F%B7%EF%BC%9ASeniorRD" alt="Typing SVG" /></a>
+                </li>
             </ul>
         </section>
         <!-- 联系方式 -->
@@ -294,17 +298,13 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>个人简介</h2>
             <hr/>
             <ul>
-                <li><span>
+                <li>
+		   <span>
                             我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、B站UP主等头衔。
                             拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
                             消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、容器编排Kubernetes、
                             Apache Spark大数据分析引擎、HDFS高吞吐量的分布式文件系统存储，Hive类SQL的引擎、HBase大数据非关系型数据库。
                     </span>
-                </li>
-		<li>
-			<span>
-				<a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=1000&random=false&width=435&lines=%E6%88%91%E6%98%AF%E5%BB%96%E5%BF%97%E4%BC%9F%EF%BC%8C%E4%B8%80%E5%90%8DJava%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88;Java%E9%A2%86%E5%9F%9F%E4%BC%98%E8%B4%A8%E5%88%9B%E4%BD%9C%E8%80%85%E3%80%81CSDN%E5%8D%9A%E5%AE%A2%E4%B8%93%E5%AE%B6;51CTO%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB%E3%80%81%E9%98%BF%E9%87%8C%E4%BA%91%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB;%E6%8B%A5%E6%9C%89%E5%A4%9A%E5%B9%B4%E4%B8%80%E7%BA%BF%E7%A0%94%E5%8F%91%E5%92%8C%E5%9B%A2%E9%98%9F%E7%AE%A1%E7%90%86%E7%BB%8F%E9%AA%8C;%E7%A0%94%E7%A9%B6%E8%BF%87%E4%B8%BB%E6%B5%81%E6%A1%86%E6%9E%B6%E7%9A%84%E5%BA%95%E5%B1%82%E6%BA%90%E7%A0%81;Spring%E3%80%81SpringBoot%E3%80%81Spring+MVC;SpringCould%E3%80%81Mybatis;Dubbo%E3%80%81Zookeeper;%E6%B6%88%E6%81%AF%E4%B8%AD%E9%97%B4%E4%BB%B6(RabbitMQ%E3%80%81RockerMQ%E3%80%81Kafka);Redis%E7%BC%93%E5%AD%98%E3%80%81MySQL%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93;ElasticSearch%E5%85%A8%E6%96%87%E6%90%9C%E7%B4%A2;MongoDB%E9%9D%9E%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93;ShardingSphere%E5%88%86%E5%BA%93%E5%88%86%E8%A1%A8%E8%AF%BB%E5%86%99%E5%88%86%E7%A6%BB;%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E3%80%81%E9%A2%86%E5%9F%9F%E9%A9%B1%E5%8A%A8DDD;%E5%AE%B9%E5%99%A8%E7%BC%96%E6%8E%92Kubernetes%E7%AD%89%E3%80%82+;%E6%AC%A2%E8%BF%8E%E5%A4%A7%E5%AE%B6%E5%8A%A0%E6%88%91%E5%BE%AE%E4%BF%A1%E5%92%A8%E8%AF%A2;%E5%BE%AE%E4%BF%A1%E5%8F%B7%EF%BC%9ASeniorRD" alt="Typing SVG" /></a>
-		    	</span>
                 </li>
             </ul>
         </section>
