--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                 </li>
                 <li>
                     <label><b>CSDN</b></label>
-                    <a href="https://blog.csdn.net/java_wxid" target="_blank">java_wxid（博客专家）</a>
+                    <a href="https://blog.csdn.net/java_wxid" target="_blank">Java程序员廖志伟（博客专家）</a>
                 </li>
                 <li>
                     <label><b>哔哩哔哩</b></label>
-                    <a href="https://space.bilibili.com/353586723" target="_blank">java_wxid（自媒体工作者）</a>
+                    <a href="https://space.bilibili.com/353586723" target="_blank">Java程序员廖志伟（自媒体从业者）</a>
                 </li>
                 <li>
                     <label><b>开源项目</b></label>
-                    <a href="https://gitee.com/java_wxid/java_wxid" target="_blank">java_wxid（项目创始人）</a>
+                    <a href="https://gitee.com/java_wxid/java_wxid" target="_blank">Java程序员廖志伟（项目创始人）</a>
                 </li>
 		<li>
                     <label><b>自我介绍</b></label>
@@ -569,16 +569,13 @@
                     <p>🍊CSDN全站排名前一百名（最靠近的一次是121名）</p>
                 </li>
                 <li>
-                    <p>🍊社交类APP研发成功（研发中）</p>
+                    <p>🍊APP研发成功（研发中）</p>
                 </li>
                 <li>
-                    <p>🍊还清老家的房贷（还有三十多万要还）</p>
+                    <p>🍊还清房贷（还有三十多万要还）</p>
                 </li>
                 <li>
                     <p>🍊娶个媳妇生个娃（单身状态）</p>
-                </li>
-                <li>
-                    <p>🍊独立出版专业书籍（已签约四本）</p>
                 </li>
                 <li>
                     <p>🍊实现个人财富自由（计划35岁躺平）</p>
@@ -591,7 +588,7 @@
                 </li>
             </ul>
         </section>
-        <!-- 自我评价 -->
+<!--        &lt;!&ndash; 自我评价 &ndash;&gt;
         <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>自我评价/期望</h2>
@@ -617,7 +614,7 @@
                 </li>
             </ul>
         </section>
-        <!-- 兴趣爱好 -->
+        &lt;!&ndash; 兴趣爱好 &ndash;&gt;
         <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
@@ -643,7 +640,7 @@
                 </li>
             </ul>
         </section>
-        <!-- 三观 -->
+        &lt;!&ndash; 三观 &ndash;&gt;
         <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观/世界观</h2>
@@ -671,7 +668,7 @@
                     <p>🔥世界观：这个世界有太多令人愤怒却无力改变的事情，而我能做的则是在能力范围内改变一些事情，让自己变得开心。</p>
                 </li>
             </ul>
-        </section>
+        </section>-->
         <!--				<section class="contact info-unit" style="width:100%; height:4000px;">-->
         <!--                    <h2>-->
         <!--                        <i class="fa fa-pencil" aria-hidden="true"></i>简历模板(PC端在线浏览，移动端需文件下载浏览)</h2>-->
