--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             🍊<a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
             🍊<a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
             🍊<a href="https://www.zhihu.com/people/java_wxid"><span>点击【知乎】</span></a><br />
-            🍊<a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />
+<!--            🍊<a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />-->
             🍊<a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
-            🍊<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
+<!--            🍊<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />-->
             🍊<a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
             🍊<a href="https://liaozhiwei.blog.csdn.net/"><span>点击【CSDN】</span></a><br />
             🍊<a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
@@ -166,12 +166,12 @@
             🍊<a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
             🍊<a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
             🍊<a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
-	    🍊<a href="https://github.com/javawxid"><span>点击【GitHub】</span></a><br />
+	        🍊<a href="https://github.com/javawxid"><span>点击【GitHub】</span></a><br />
             🍊<a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
             🍊<a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
-            🍊<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
+<!--            🍊<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />-->
             🍊<a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
-            🍊<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
+<!--            🍊<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />-->
             🍊<a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
             🍊<a href="https://tieba.baidu.com/home/main?id=tb.1.cd3f2863.TkzPCu_Kn1RjV89k8IWXXw&fr=userbar"><span>点击【百度贴吧】</span></a><br />
             🍊<a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
@@ -196,7 +196,7 @@
             <ul>
                 <li>
                     📝主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                    消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、Kubernetes容器编排。
+                    消息中间件底层架构原理（RabbitMQ、RocketMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、Kubernetes容器编排。
                 </li>
             </ul>
         </section>
@@ -297,18 +297,18 @@
             <ul>
                 <li>
 		            <span>
-                            我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、B站UP主等头衔。
-                            拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、容器编排Kubernetes、
+                            我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、哔哩哔哩UP主等头衔。
+                            拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCloud、Mybatis、Dubbo、Zookeeper)，
+                            消息中间件底层架构原理（RabbitMQ、RocketMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、容器编排Kubernetes、
                             Apache Spark大数据分析引擎、HDFS高吞吐量的分布式文件系统存储，Hive类SQL的引擎、HBase大数据非关系型数据库。
                     </span>
                 </li>
-                <li>
+<!--                <li>
                     <label><b>自我介绍</b></label>
                     <a href="https://git.io/typing-svg"><img src="
                         https://readme-typing-svg.herokuapp.com/?font=Fira+Code&pause=1&random=false&width=10000&lines=%E6%88%91%E6%98%AF%E5%BB%96%E5%BF%97%E4%BC%9F%EF%BC%8C%E4%B8%80%E5%90%8DJava%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88%EF%BC%8C%E3%80%8AJava%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%88%98%E2%80%94%E2%80%94%E6%B7%B1%E5%85%A5%E7%90%86%E8%A7%A3%E5%A4%A7%E5%9E%8B%E4%BA%92%E8%81%94%E7%BD%91%E4%BC%81%E4%B8%9A%E9%80%9A%E7%94%A8%E6%8A%80%E6%9C%AF%E3%80%8B%EF%BC%88%E5%9F%BA%E7%A1%80%E7%AF%87%EF%BC%89%E3%80%81%EF%BC%88%E8%BF%9B%E9%98%B6%E7%AF%87%EF%BC%89%E3%80%81%EF%BC%88%E6%9E%B6%E6%9E%84%E7%AF%87%EF%BC%89%E4%BD%9C%E8%80%85%E3%80%81%E6%B8%85%E5%8D%8E%E5%A4%A7%E5%AD%A6%E5%87%BA%E7%89%88%E7%A4%BE%E7%AD%BE%E7%BA%A6%E4%BD%9C%E5%AE%B6%E3%80%81Java%E9%A2%86%E5%9F%9F%E4%BC%98%E8%B4%A8%E5%88%9B%E4%BD%9C%E8%80%85;CSDN%E5%8D%9A%E5%AE%A2%E4%B8%93%E5%AE%B6%E3%80%81%E9%98%BF%E9%87%8C%E4%BA%91%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB%E3%80%8151CTO%E4%B8%93%E5%AE%B6%E5%8D%9A%E4%B8%BB%E3%80%81%E4%BA%A7%E5%93%81%E8%BD%AF%E6%96%87%E4%B8%93%E4%B8%9A%E5%86%99%E6%89%8B%E3%80%81%E6%8A%80%E6%9C%AF%E6%96%87%E7%AB%A0%E8%AF%84%E5%AE%A1%E8%80%81%E5%B8%88%E3%80%81%E6%8A%80%E6%9C%AF%E7%B1%BB%E9%97%AE%E5%8D%B7%E8%B0%83%E6%9F%A5%E8%AE%BE%E8%AE%A1%E5%B8%88%E3%80%81%E5%B9%95%E5%90%8E%E5%A4%A7%E4%BD%AC%E7%A4%BE%E5%8C%BA%E5%88%9B%E5%A7%8B%E4%BA%BA%E3%80%81%E5%BC%80%E6%BA%90%E9%A1%B9%E7%9B%AE%E8%B4%A1%E7%8C%AE%E8%80%85%E3%80%81%E5%93%94%E5%93%A9%E5%93%94%E5%93%A9UP%E4%B8%BB;%E6%8B%A5%E6%9C%89%E5%A4%9A%E5%B9%B4%E4%B8%80%E7%BA%BF%E7%A0%94%E5%8F%91%E5%92%8C%E5%9B%A2%E9%98%9F%E7%AE%A1%E7%90%86%E7%BB%8F%E9%AA%8C%EF%BC%8C%E7%A0%94%E7%A9%B6%E8%BF%87%E4%B8%BB%E6%B5%81%E6%A1%86%E6%9E%B6%E7%9A%84%E5%BA%95%E5%B1%82%E6%BA%90%E7%A0%81%EF%BC%88Spring%E3%80%81SpringBoot%E3%80%81SpringMVC%E3%80%81SpringCloud%E3%80%81Mybatis%E3%80%81Dubbo%E3%80%81Zookeeper%EF%BC%89;%E6%B6%88%E6%81%AF%E4%B8%AD%E9%97%B4%E4%BB%B6(RabbitMQ%E3%80%81RocketMQ%E3%80%81Kafka)%E3%80%81Redis%E7%BC%93%E5%AD%98%E3%80%81MySQL%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93%E3%80%81ElasticSearch%E5%85%A8%E6%96%87%E6%90%9C%E7%B4%A2%E3%80%81MongoDB%E9%9D%9E%E5%85%B3%E7%B3%BB%E5%9E%8B%E6%95%B0%E6%8D%AE%E5%BA%93%E3%80%81ShardingSphere%E5%88%86%E5%BA%93%E5%88%86%E8%A1%A8%E8%AF%BB%E5%86%99%E5%88%86%E7%A6%BB;%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E3%80%81%E9%A2%86%E5%9F%9F%E9%A9%B1%E5%8A%A8DDD%E3%80%81%E5%AE%B9%E5%99%A8%E7%BC%96%E6%8E%92Kubernetes%E7%AD%89%E3%80%82%E4%B8%8D%E5%AE%9A%E6%9C%9F%E5%88%86%E4%BA%AB%E9%AB%98%E5%B9%B6%E5%8F%91%E3%80%81%E9%AB%98%E5%8F%AF%E7%94%A8%E3%80%81%E9%AB%98%E6%80%A7%E8%83%BD%E3%80%81%E5%BE%AE%E6%9C%8D%E5%8A%A1%E3%80%81%E5%88%86%E5%B8%83%E5%BC%8F%E3%80%81%E6%B5%B7%E9%87%8F%E6%95%B0%E6%8D%AE%E3%80%81%E6%80%A7%E8%83%BD%E8%B0%83%E4%BC%98%E3%80%81%E4%BA%91%E5%8E%9F%E7%94%9F%E3%80%81%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86%E3%80%81%E4%BA%A7%E5%93%81%E6%80%9D%E7%BB%B4%E3%80%81%E6%8A%80%E6%9C%AF%E9%80%89%E5%9E%8B%E3%80%81%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1;%E6%B1%82%E8%81%8C%E9%9D%A2%E8%AF%95%E3%80%81%E5%89%AF%E4%B8%9A%E6%80%9D%E7%BB%B4%E3%80%81%E4%B8%AA%E4%BA%BA%E6%88%90%E9%95%BF%E7%AD%89%E5%86%85%E5%AE%B9%E3%80%82%E6%AC%A2%E8%BF%8E%E5%A4%A7%E5%AE%B6%E5%8A%A0%E6%88%91%E5%BE%AE%E4%BF%A1%E5%92%A8%E8%AF%A2,%E5%BE%AE%E4%BF%A1%E5%8F%B7%EF%BC%9ASeniorRD
                     " alt="Typing SVG" /></a>
-                </li>
+                </li>-->
             </ul>
         </section>
         <!--职业技能-->
@@ -361,7 +361,7 @@
 
                         <li>
                             <span>
-                                🍊RabbitMQ、RockerMQ、Kafka 三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题的解决方案。RabbitMQ的工作模式，RocketMQ的消息类型，Kafka消费模式、主题/分区/日志、核心总控制器以及它的选举机制、
+                                🍊RabbitMQ、RocketMQ、Kafka 三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题的解决方案。RabbitMQ的工作模式，RocketMQ的消息类型，Kafka消费模式、主题/分区/日志、核心总控制器以及它的选举机制、
                                     Partition副本选举Leader机制、消费者消费消息的offset记录机制、消费者Rebalance机制、Rebalance分区分配策略、Rebalance过程、 producer发布消息机制、HW与LEO、日志分段存储、十亿消息数据线上环境规划、JVM参数设置。
 
                             </span>
@@ -681,8 +681,8 @@
     </section>
 </article>
         <footer class="footer">
-            <p>© 2023 廖志伟.文档最后更新时间为
-                <time>2023年11月08日</time>.</p>
+            <p>© 2025 廖志伟.文档最后更新时间为
+                <time>2025年3月04日</time>.</p>
         </footer>
         <!-- 侧栏 -->
         <aside>
