--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        function loading() {
-            document.getElementsByClassName('avatar')[0].style.display = 'block';
-            document.getElementsByClassName('loading')[0].style.display = 'none';
-        }
 
         // 页面加载完成后执行
         document.addEventListener('DOMContentLoaded', function() {
-
+            // 检查图片是否存在
+            const avatarImg = document.querySelector('.avatar');
+            if (avatarImg) {
+                // 手动触发一次加载检查
+                if (avatarImg.complete) {
+                    avatarImg.style.display = 'block';
+                    avatarImg.previousElementSibling.style.display = 'none';
+                }
+            }
             // 创建交叉观察器实例 - 用于卡片动画
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
@@ -1178,10 +1182,20 @@
 
         <!-- 个人肖像 -->
         <section class="me card">
-            <img class="avatar" width="100%" height="100%" src="./本人.jpg">
+            <div class="image-container">
+                <div class="loading" style="display: flex; justify-content: center; align-items: center; height: 200px;">
+                    <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
+                </div>
+                <img class="avatar" src="本人.jpg" alt="个人肖像"
+                     style="display: none; max-width: 100%; height: auto; object-fit: cover;"
+                     onload="this.style.display='block'; this.previousElementSibling.style.display='none';"
+                     onerror="this.style.display='none'; this.previousElementSibling.innerHTML='<i class=\'fa fa-exclamation-triangle fa-3x\' style=\'color: #e74c3c;\' aria-hidden=\'true\'></i>';">
+            </div>
             <h1 class="name">廖志伟</h1>
             <h4 class="info-job">Java / 上海</h4>
         </section>
+
+
 
         <!-- 基本信息 -->
         <section class="profile info-unit card">
@@ -1252,7 +1266,14 @@
                 </li>
             </ul>
             <label>微信号</label>
-            <img class="avatar" width="100%" height="100%" src="./微信号.jpg">
+            <div class="image-container">
+                <div class="loading" style="display: flex; justify-content: center; align-items: center; height: 200px;">
+                    <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
+                </div>
+                <img class="avatar" src="./微信号.jpg" alt="微信号二维码"
+                     style="display: none; max-width: 100%; height: auto; object-fit: cover;"
+                     loading="lazy" onload="this.style.display='block'; this.previousElementSibling.style.display='none';">
+            </div>
         </section>
 
         <!-- 自媒体矩阵 -->
