--- a/index.html
+++ b/index.html
@@ -1912,6 +1912,56 @@
             </ul>
         </section>
 
+        <!-- 商业思维 -->
+        <section class="work info-unit card">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>商业思维</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <i class="fa fa-flask" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维1：先做个简单的原型试试水，别一上来就搞大项目。失败了也没关系，快速调整方向，多试几次总能找到对的路子。</span>
+                </li>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维2：薄利多销才是王道。500块的利润看着不多，但卖上2000份就是100万，比你辛辛苦苦搞一个大单划算多了。</span>
+                </li>
+                <li>
+                    <i class="fa fa-clone" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维3：找一个成功的榜样学学，人家已经踩过坑了，照着做风险小很多。学过来再加点自己的创意，做出更好的东西。</span>
+                </li>
+                <li>
+                    <i class="fa fa-bullhorn" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维4：生意好不好，关键看有多少人知道你。产品再牛，没人知道也白搭。流量大了，哪怕产品一般也能卖得动。搞点自动化流程，少雇点人，把复杂的事情简单化，效率提上去。</span>
+                </li>
+                <li>
+                    <i class="fa fa-lightbulb-o" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维5：学东西得有用武之地，学了用不上就别学了，纯属浪费时间。</span>
+                </li>
+                <li>
+                    <i class="fa fa-cubes" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维6：从小本生意开始，赚到第一桶金就赶紧复制成功模式，把规模做大。</span>
+                </li>
+                <li>
+                    <i class="fa fa-tachometer" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维7：做那种周转快的小生意，宁愿一小时卖一万份赚十万，也不要做十小时才卖一份赚十万的大单子。</span>
+                </li>
+                <li>
+                    <i class="fa fa-pie-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维8：创业心态很重要，别瞎纠结内耗。把时间花在收集数据和分析上，用事实说话，别活在自己的幻想里。</span>
+                </li>
+                <li>
+                    <i class="fa fa-heart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维9：做生意得想着怎么帮别人解决问题，人家有需求，你的产品才有价值。说白了，好生意就是把别人的钱合理地转移到你口袋里。关键是要提供真正有价值的东西，让用户心甘情愿买单。</span>
+                </li>
+                <li>
+                    <i class="fa fa-recycle" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span>思维10：要学会变通，把身边所有能用的资源都用起来赚钱。就像那个外卖小哥，下雨天不只送外卖，还卖伞卖雨衣，甚至搞自媒体赚钱。客户想压价？他用猜拳的方式决定价格。为了多赚钱，他甚至在路上拉客跑黑车。因为到处跑，被罚的风险反而降低了。</span>
+                </li>
+            </ul>
+        </section>
+
+
         <!-- 持续计划 -->
         <section class="work info-unit card">
             <h2>
